# quant-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.runE  README.md  alembic.ini  docker-compose.yml  env.paper.example  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
data/: sp500_universe.txt
demo/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
demo/server/: alpaca.ts  index.ts  marketData.ts  paperTrading.ts
demo/src/: App.tsx  types.ts
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/tests/: dashboard.spec.ts
k8s/hypothesis-validation/: alpaca-secret-template.yaml  backtest-job-template.yaml  configmap.yaml  deployment-quant-api.yaml  deployment-quant-frontend.yaml  kustomization.yaml  namespace.yaml  nginx-frontend-cm.yaml  paper-trading.yaml  parameter-sweep-cronjob.yaml  pvc.yaml  quant-api-secret-template.yaml  tailscale-ingress.yaml
k8s/monitoring/: grafana-dashboard-paper-trading.yaml  kustomization.yaml  vmagent-scrape-quant.yaml
k8s/quant-dashboard/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
migrations/: 001_paper_trading_schema.sql
monitoring/: docker-compose.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
plans/: 2026-03-28-COO-QUA95-dashboard-operational-requirements.md  2026-03-28-COO-circuit-breaker-response-playbook.md  2026-03-28-COO-nav-reconciliation-procedure.md  2026-03-28-COO-paper-trading-operations-runbook.md  2026-03-28-CRO-clearance-QUA102-k8s-deploy.md  2026-03-28-CRO-gate-decision-QUA71b-bayesian-combiner.md  2026-03-28-CRO-gate-decision-QUA85-signal-expansion.md  2026-03-28-CRO-gate-decision-QUA92-vol-sleeve.md  2026-03-28-CRO-gate-decision-mvp-us-equity-ensemble.md  2026-03-28-CRO-gate-decision-v2-PAPER-TRADING-GO.md  2026-03-28-CRO-model-risk-alert-QUA68-QUA69.md  2026-03-28-CRO-model-risk-disposition-QUA88-HMM.md  2026-03-28-CRO-model-risk-flag-backtest-infra-gap.md  2026-03-28-CRO-model-risk-review-QUA71b-integration.md  2026-03-28-CRO-model-risk-review-QUA92-vol-sleeve.md  2026-03-28-CRO-response-QUA71-correction.md  2026-03-28-CRO-review-cmd-run-state-file.md  2026-03-28-CRO-security-review-quant-api.md  2026-03-28-CRO-sign-off-QUA77-QUA79.md  2026-03-28-CTO-QUA102-security-findings-resolved.md  2026-03-28-CTO-QUA71b-results-CRO-submission.md  2026-03-28-CTO-QUA92-vol-regime-sleeve-plan.md  2026-03-28-CTO-QUA95-production-frontend-plan.md  2026-03-28-CTO-maxdd-regression-investigation.md  2026-03-28-QUA-71-root-cause-and-fix-plan.md  2026-03-28-QUA-71b-corrected-results-and-next-steps.md  2026-03-28-QUA-71b-implementation-ready.md  2026-03-29-CRO-CRITICAL-hold-circuit-breaker.md  2026-03-29-CRO-k8s-manifest-review.md  2026-03-29-CRO-re-clearance-QUA128-circuit-breaker.md  2026-03-30-COO-day1-eod-summary.md  2026-03-30-COO-day1-go-live-checklist.md  2026-03-30-CRO-day1-readiness-acknowledgment.md  COO-weekly-cro-report-template.md  QUA-85-signal-expansion-results.json  QUA-85-signal-expansion-results.md  QUA-92-vol-regime-results.json  QUA-92-vol-regime-results.md  operations-log-2026-03.md  operations-log-2026-04.md  (+1 more)
quant/: Dockerfile.runE  __init__.py  config.py  orchestrator.py  preflight.py  runner.py  service.py  validation.py
quant-rs/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.gpu  pyproject.toml
quant-rs/quant-api/: Cargo.toml  Dockerfile
quant-rs/quant-api/src/: auth.rs  error.rs  lib.rs  main.rs  ws.rs
quant-rs/quant-api/src/routes/: backtest.rs  health.rs  market.rs  mod.rs  orders.rs  portfolio.rs  risk.rs  signals.rs  strategies.rs
quant-rs/quant-api/tests/: api_test.rs
quant-rs/quant-backtest/: Cargo.toml
quant-rs/quant-backtest/benches/: backtest_engine.rs
quant-rs/quant-backtest/src/: lib.rs  walkforward.rs
quant-rs/quant-bayes/: Cargo.toml
quant-rs/quant-bayes/src/: conjugate.rs  hmm.rs  lib.rs
quant-rs/quant-bayes/tests/: backtest_integration.rs
quant-rs/quant-cli/: Cargo.toml
quant-rs/quant-cli/src/: cmd_backtest.rs  cmd_benchmark.rs  cmd_ingest.rs  cmd_run.rs  cmd_serve.rs  cmd_wf.rs  main.rs
quant-rs/quant-data/: Cargo.toml
quant-rs/quant-data/src/: error.rs  lib.rs  models.rs  pipeline.rs  store.rs
quant-rs/quant-data/src/ingest/: mod.rs  yahoo.rs
quant-rs/quant-features/: Cargo.toml
quant-rs/quant-features/benches/: indicators.rs
quant-rs/quant-features/src/: lib.rs
quant-rs/quant-features/src/indicators/: mod.rs
quant-rs/quant-oms/: Cargo.toml
quant-rs/quant-oms/src/: alpaca.rs  broker.rs  error.rs  lib.rs  models.rs  store.rs  system.rs
quant-rs/quant-portfolio/: Cargo.toml
quant-rs/quant-portfolio/src/: alpha.rs  covariance.rs  error.rs  lib.rs  optimizer.rs  rebalancer.rs
quant-rs/quant-risk/: Cargo.toml
quant-rs/quant-risk/benches/: risk_kernels.rs
quant-rs/quant-risk/src/: circuit_breaker.rs  lib.rs  limits.rs  sizing.rs
quant-rs/quant-signals/: Cargo.toml
quant-rs/quant-signals/benches/: signal_kernels.rs
quant-rs/quant-signals/src/: lib.rs
quant-rs/src/: backtest.rs  features.rs  lib.rs  oms.rs  portfolio.rs  risk.rs  signals.rs
quant/backtest/: __init__.py  comparison.py  drawdown_analysis.py  engine.py  factor_exposure.py  metrics.py  monte_carlo.py  multi_strategy.py  multi_strategy_walk_forward.py  portfolio_backtest.py  regime_analysis.py  report.py  sensitivity.py  strategy.py  strategy_comparison.py  walk_forward.py
quant/data/: __init__.py  config.py  outlier_detector.py  pipeline.py  universe.py  validation.py
quant/db/: __init__.py  models.py  session.py
quant/execution/: __init__.py  algorithms.py  alpaca.py  ccxt_adapter.py  cost_model.py  fill_simulator.py  ib.py  paper.py  quality.py  quality_tracker.py  schedule_optimizer.py  tca.py
quant/oms/: broker.py  (+6 more)
quant_data.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+204 files in other folders)
