[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-data"
version = "0.1.0"
description = "Market data ingestion pipeline for quantitative trading"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.38",
    "duckdb>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.4",
    "click>=8.1.7",
    "loguru>=0.7.2",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "freezegun>=1.4.0",
]

[project.scripts]
quant-ingest = "quant.scripts.ingest_eod:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
