[workspace]
resolver = "2"
members = [
    "quant-features",
    "quant-risk",
    "quant-signals",
    "quant-backtest",
    "quant-oms",
    "quant-portfolio",
    "quant-data",
    "quant-cli",
    "quant-bayes",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
