[package]
name = "quant-rs"
version = "0.1.0"
edition = "2021"
description = "PyO3 Python bindings for quant-rs Rust compute kernels"

[lib]
name = "quant_rs"
crate-type = ["cdylib", "rlib"]
# No Rust unit tests in the Python-binding layer; tested end-to-end via pytest.
test = false

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28" }
quant-features = { path = "quant-features" }
quant-risk = { path = "quant-risk" }
quant-signals = { path = "quant-signals" }
quant-backtest = { path = "quant-backtest" }

[workspace]
resolver = "2"
members = [
    "quant-features",
    "quant-risk",
    "quant-signals",
    "quant-backtest",
    "quant-oms",
    "quant-portfolio",
    "quant-data",
    "quant-cli",
    "quant-bayes",
    "quant-api",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
