[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "quant-rs"
version = "0.1.0"
description = "Rust-accelerated compute kernels for quant infrastructure"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "quant_rs"
# Build the workspace root package
manifest-path = "Cargo.toml"
