[package]
name = "quant-api"
version = "0.1.0"
edition = "2021"
description = "Axum REST + WebSocket API gateway for the quant engine"

[[bin]]
name = "quant-api"
path = "src/main.rs"

[dependencies]
quant-data = { path = "../quant-data" }
quant-oms = { path = "../quant-oms" }
quant-risk = { path = "../quant-risk" }
quant-features = { path = "../quant-features" }
quant-signals = { path = "../quant-signals" }
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
