[package]
name = "quant-api"
version = "0.1.0"
edition = "2021"
description = "REST + WebSocket API gateway for the quant trading dashboard"

[[bin]]
name = "quant-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
duckdb = { version = "1", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
