[package]
name = "quant-data"
version = "0.1.0"
edition = "2021"
description = "Market data ingestion: DuckDB storage and Yahoo Finance HTTP source"

[lib]
crate-type = ["rlib"]

[dependencies]
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
