[package]
name = "quant-oms"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust Order Management System: models, state machine, and SQLite persistence"

[lib]
crate-type = ["rlib"]

[dependencies]
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
