[package]
name = "quant-signals"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust signal framework: momentum, mean-reversion, trend-following"

[lib]
crate-type = ["rlib"]

[dependencies]
quant-bayes = { path = "../quant-bayes" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "signal_kernels"
harness = false
